fixPuntoEca (#33)
* Informacion del Ciudadano

*Se implementa DTOS, Service, Service implement, Controlador, y repositorio para el apartado del Ciudadano, asi como la modificacion de la vista del mismo

* implementacion del login con creacion de usuario

* implementacion del login con creacion de usuario

* feat: agregar funcionalidad para cambiar contraseña y actualizar preferencias del usuario gestor eca

* feat: agregar funcionalidad para cambiar contraseña y actualizar preferencias del usuario gestor eca

* feat: implementar funcionalidad para cambiar contraseña y validaciones en tiempo real para ciudadano y gestor eca

* feat: implementar funcionalidad para cambiar contraseña y validaciones en tiempo real para ciudadano y gestor eca

* correciones en logica de negocio de ventas para no permitir ingresos superiores al stock y arreglos en la creacion de eventos que tenian conflicts con credenciales

* correciones en logica de negocio de ventas para no permitir ingresos superiores al stock y arreglos en la creacion de eventos que tenian conflicts con credenciales

* eliminacion de archivos basura

---------

Co-authored-by: jlbf2005 <programacionjorgeb@gmail.com>